--- a/TestKendoUI/TestKendoUI.csproj
+++ b/TestKendoUI/TestKendoUI.csproj
@@ -4379,6 +4379,7 @@
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Shared\Tab.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
