--- a/TestKendoUI/Web.config
+++ b/TestKendoUI/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-TestKendoUI-20150713102628.mdf;Initial Catalog=aspnet-TestKendoUI-20150713102628;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="VAHamptonAcceliPlanConnectionString" connectionString="Data Source=.\SQlexpress2014;Initial Catalog=VAHamptonAcceliPlan;Integrated Security=True"
+    <add name="VAHamptonAcceliPlanConnectionString" connectionString="Data Source=KAZACHENOK2\SQLEXPRESS;Initial Catalog=VAHamptonAcceliPlan;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
